# toshset

./: .gitignore  ChangeLog  Makefile.in  README  cdsExcept.hh  cdsList.cc  cdsList.hh  cdsMath.cc  cdsMath.hh  cdsSStream.cc  cdsSStream.hh  cdsString.cc  cdsString.hh  configure  configure.in  direct.h  direct32.c  direct64.c  hci.c  hci.h  index.html.in  kernelInterface.c  kernelInterface.h  sci.c  sci.h  smm.h  toshibaIDs.cc  toshibaIDs.hh  toshset.1  toshset.cc  wildmat.c  wildmat.h
toshiba_acpi/: toshiba_acpi-5.0.5.patch  toshiba_acpi.patch
