dnl Process this file with autoconf to produce a configure script.
dnl Author: Charles Schwieters <Charles@Schwieters.org>

AC_REVISION([configure.in 1.00])
AC_INIT(toshset.cc)

PROGRAMS="toshset"

MANPAGES="toshset.1"

VERSION=1.76

dnl **** Command-line arguments ****

AC_ARG_ENABLE(debug, [  --enable-debug     turn on debugging [default=no]],
  if test "$enable_debug" = "yes"; then
    DEBUGFLAGS='-g -DDEBUG'
  fi)

if test -z "$DEBUGFLAGS"; then
	LDFLAGS='-s'
fi

dnl **** We only support Linux ****

AC_CANONICAL_HOST
case "$host_os" in
  linux*)
    OS_CFLAGS='-DLINUX'
  ;;
  *)
    AC_MSG_WARN(*** Your OS ($$host_os) has not been tested. Proceed with caution ***)
  ;;
esac

dnl **** Check for some programs ****

AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

if test "x$x_includes" = "x"; then
  x_includes="/usr/include"
fi

if test "${prefix}" = "NONE"; then
	prefix=/usr/local
fi

if test "${exec_prefix}" = "NONE"; then
	exec_prefix=${prefix}
fi

dnl **** Generate output files ****

AC_SUBST(PROGRAMS)
AC_SUBST(MANPAGES)
AC_SUBST(VERSION)
AC_SUBST(OS_CFLAGS)
AC_SUBST(DEBUGFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(Makefile)

echo
echo "Configure finished. Do 'make' to compile."
echo
